# scanImage

./: README.md  pyproject.toml
app/: server.py  testPaht.py
constants/: model_templates.py
controllers/: uploadFile.py
core/tools/: uploadFile.py
test/: testPdf.py  test_upload.py
